<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/add_button"
    android:orientation="vertical"
    tools:context=".CreateCocktailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="54dp">

            <ImageView
                android:id="@+id/imageCocktail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_cocktail"
                android:scaleType="centerCrop"
                android:src="@drawable/image_cocktail" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCocktailName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/title_cocktail"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCocktailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_marginTop="24dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:helperText="@string/optional_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRecipe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:hint="@string/recipe_cocktail"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:helperText="@string/optional_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRecipe"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button_color_blue"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/save_cocktail"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonCancel"
            style="?materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="26dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/cancel_cocktail"
            android:textColor="@color/button_color_blue"
            android:textSize="24sp"
            app:strokeColor="@color/button_color_blue" />

    </LinearLayout>
</ScrollView>